# hermes-mneme

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  README.ru.md  __init__.py  classifier.py  compressor.py  config.py  engine.py  enrichment.py  graph.py  index.py  install.sh  observability.py  parser.py  plugin.yaml  prompt_builder.py  pyproject.toml  requirements.txt  router.py  segmenter.py  store.py  tools.py
.github/workflows/: test.yml
docs/: DIVERGENCE.md  UPSTREAM_HERMES_PR.md  architecture.md  configuration.md  development.md
tests/: conftest.py
tests/diagnostic/: replay_assembly.py  reproduce_lineage_loss.py  reproduce_state_bugs.py
tests/integration/: test_embedding_batch.py  test_store.py
tests/unit/: test_classifier.py  test_parser.py  test_router_dependency.py
